--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 <!-- Header -->
 <section id="header">
     <header>
-        <span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+        <span class="image avatar"><img src="static/images/avatar.jpg" alt="" /></span>
         <h1 id="logo"><a href="#">Willis Corto</a></h1>
         <p>I got reprogrammed by a rogue AI<br />
             and now I'm totally cray</p>
@@ -49,7 +49,7 @@
         <!-- One -->
         <section id="one">
             <div class="image main" data-position="center">
-                <img src="images/banner.jpg" alt="" />
+                <img src="static/images/banner.jpg" alt="" />
             </div>
             <div class="container">
                 <header class="major">
@@ -84,21 +84,21 @@
                 <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
                 <div class="features">
                     <article>
-                        <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                        <a href="#" class="image"><img src="static/images/pic01.jpg" alt="" /></a>
                         <div class="inner">
                             <h4>Possibly broke spacetime</h4>
                             <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
                         </div>
                     </article>
                     <article>
-                        <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                        <a href="#" class="image"><img src="static/images/pic02.jpg" alt="" /></a>
                         <div class="inner">
                             <h4>Terraformed a small moon</h4>
                             <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
                         </div>
                     </article>
                     <article>
-                        <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                        <a href="#" class="image"><img src="static/images/pic03.jpg" alt="" /></a>
                         <div class="inner">
                             <h4>Snapped dark matter in the wild</h4>
                             <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
@@ -438,23 +438,23 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
                     <section>
                         <h4>Image</h4>
                         <h5>Fit</h5>
-                        <span class="image fit"><img src="images/banner.jpg" alt="" /></span>
+                        <span class="image fit"><img src="static/images/banner.jpg" alt="" /></span>
                         <div class="box alt">
                             <div class="row gtr-50 gtr-uniform">
-                                <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                <div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic01.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic02.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic03.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic02.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic03.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic01.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic03.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic01.jpg" alt="" /></span></div>
+                                <div class="col-4"><span class="image fit"><img src="static/images/pic02.jpg" alt="" /></span></div>
                             </div>
                         </div>
                         <h5>Left &amp; Right</h5>
-                        <p><span class="image left"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
-                        <p><span class="image right"><img src="images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+                        <p><span class="image left"><img src="static/images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
+                        <p><span class="image right"><img src="static/images/avatar.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent.</p>
                     </section>
 
                 </div>
