Hopefully this lets the JavaScript code do its job.

--- a/templates/index.html
+++ b/templates/index.html
@@ -475,13 +475,13 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 </div>
 
 <!-- Scripts -->
-<script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="static/jquery.min.js"></script>
+<script src="static/jquery.scrollex.min.js"></script>
+<script src="static/jquery.scrolly.min.js"></script>
+<script src="static/browser.min.js"></script>
+<script src="static/breakpoints.min.js"></script>
+<script src="static/util.js"></script>
+<script src="static/main.js"></script>
 
 </body>
 </html>
